# linked-lda

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.txt  config_sanya.txt  config_vova.txt
model/: model-test-2-100.phi  model-test-2-100.theta  model-test-2-100.twords  model-test-2-20.phi  model-test-2-20.theta  model-test-2-20.twords  model-test-2-40.phi  model-test-2-40.theta  model-test-2-40.twords  model-test-2-60.phi  model-test-2-60.theta  model-test-2-60.twords  model-test-2-80.chi  model-test-2-80.phi  model-test-2-80.theta  model-test-2-80.twords  model-test-2.inf.chi  model-test-2.inf.phi  model-test-2.inf.refdoc  model-test-2.inf.tassign  model-test-2.inf.theta  model-test-2.inf.twords  model-test-2.refdoc  model-test-2.tassign
src/: Corpus-inl.h  Corpus.cpp  Corpus.h  CountTables-inl.h  CountTables.cpp  CountTables.h  Document-inl.h  Document.cpp  Document.h  LinkGraph-inl.h  LinkGraph.cpp  LinkGraph.h  Makefile  Model.cpp  Model.h  ModelProperties-inl.h  ModelProperties.cpp  ModelProperties.h  MultinomialDistribution.cpp  MultinomialDistribution.h  Utils.h  Vocabulary-inl.h  Vocabulary.cpp  Vocabulary.h  linkedLDA.cpp
test/: corpus.txt  fullLinks.txt  links.txt  testLinks.txt  testcorpus.txt  vocab.txt  vocab.txt.inf
test/1481986676099/: cutten.links.data  indexed.links — копия.data  indexed.links.data  indexed.mapping.data  links.data
test/1482102449780/: indexed.links.data  indexed.mapping.data  links.data  nostopwords.indexed.content.data  senya_result.txt  simpletest.txt  test.data
test/last/: indexed.links.data
